changed menu icon to fixed position to improve on smaller devices who need to scroll

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -140,7 +140,7 @@ header{
 
 //Style help menu and icon
 #help-icon{
-  position: absolute;
+  position: fixed;
   bottom: 1rem;
   right: 1rem;
   cursor: pointer;
